force-app/main/default/objects/FS_ProductoAdquirido__c/FS_ProductoAdquirido__c.object-meta.xml
<CustomObject>
    <label>Producto Adquirido</label>
    <nameField>
        <label>Nombre de Categoría</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Productos Adquiridos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>