force-app/main/default/objects/FS_ProductoAdquirido__c/fields/FS_Modulo__c.field-meta.xml
<CustomField>
    <fullName>FS_Modulo__c</fullName>
    <label>Módulo</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FS_Producto__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GENERALES</fullName>
            </value>
            <value>
                <fullName>CLIENTES</fullName>
            </value>
            <value>
                <fullName>CAJA Y SERVICIOS</fullName>
            </value>
            <value>
                <fullName>CAPTACIONES VISTA</fullName>
            </value>
            <value>
                <fullName>CAPTACIONES A PLAZO</fullName>
            </value>
            <value>
                <fullName>COLOCACIONES</fullName>
            </value>
            <value>
                <fullName>ESTABLECIMIENTOS</fullName>
            </value>
            <value>
                <fullName>TARJETA DE CREDITO</fullName>
            </value>
            <value>
                <fullName>COMERCIO EXTERIOR</fullName>
            </value>
            <value>
                <fullName>MESA DE DINERO</fullName>
            </value>
            <value>
                <fullName>SERVICIOS</fullName>
            </value>
            <value>
                <fullName>TARJETA DE DEBITO</fullName>
            </value>
            <value>
                <fullName>INF. MANAGEMEN SYST. (IMS)</fullName>
            </value>
            <value>
                <fullName>CHECK CLEARING (ECCO)</fullName>
            </value>
            <value>
                <fullName>PROCESO DE DOCUMENTO (DIPS)</fullName>
            </value>
            <value>
                <fullName>CONTABILIDAD</fullName>
            </value>
            <value>
                <fullName>REPORTES DEL SISTEMA</fullName>
            </value>
            <value>
                <fullName>GARANTIAS</fullName>
            </value>
            <value>
                <fullName>SEGURIDAD INTERNA</fullName>
            </value>
            <value>
                <fullName>Business Application Products</fullName>
            </value>
            <value>
                <fullName>Business Application Generator</fullName>
            </value>
            <value>
                <fullName>Business Support Aplication</fullName>
            </value>
            <value>
                <fullName>Integration Service FSY</fullName>
            </value>
            <value>
                <fullName>Business Aplication</fullName>
            </value>
            <value>
                <fullName>Homebanking</fullName>
            </value>
            <value>
                <fullName>OLB-FT</fullName>
            </value>
            <value>
                <fullName>Móvil</fullName>
            </value>
            <value>
                <fullName>Kiosko</fullName>
            </value>
            <value>
                <fullName>Multichanel Management</fullName>
            </value>
            <value>
                <fullName>Motor Transaccional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>