force-app/main/default/objects/FS_ProductoAdquirido__c/fields/FS_Producto__c.field-meta.xml
<CustomField>
    <fullName>FS_Producto__c</fullName>
    <label>Producto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FISA System</fullName>
            </value>
            <value>
                <fullName>FISA - Business Platform</fullName>
            </value>
            <value>
                <fullName>FISA Credit Card</fullName>
            </value>
            <value>
                <fullName>FISA FISS</fullName>
            </value>
            <value>
                <fullName>OMNIA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>